fix(frontend): change colour of podcast placeholder text in dark mode from grey to white

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -43,6 +43,19 @@ body {
   body {
     background:var(--dark-grey);
   }
+
+  /* Change colour of podcast search bar placeholder text to white on dark mode */
+  ::placeholder {
+    color: white;
+  }
+
+  :-ms-input-placeholder {
+    color: white; 
+  }
+
+  ::ms-input-placeholder {
+    color: white; 
+  }
 }
 
 /*----------------------------------General------------------------------------*/
